# minos

./: .env.example  .gitattributes  .gitignore  AGETNS.md  Cargo.toml  LICENSE  README.md  copilot-instructions.md  deny.toml  flutter_rust_bridge.yaml  justfile  rust-toolchain.toml
crates/minos-agent-runtime/: Cargo.toml
crates/minos-agent-runtime/src/: approvals.rs  codex_client.rs  config.rs  exec_jsonl.rs  ingest.rs  instance.rs  lib.rs  manager.rs  manager_event.rs  process.rs  runtime.rs  state.rs  state_machine.rs  store_facing.rs  test_support.rs  thread_handle.rs  translate.rs
crates/minos-agent-runtime/tests/: ingest_integration.rs  multi_session_smoke.rs  runtime_e2e.rs  translate_table.rs  user_message_synth.rs
crates/minos-backend/: Cargo.toml
crates/minos-backend/migrations/: 0001_devices.sql  0004_pairings_single_pair_per_device.sql  0005_threads.sql  0006_raw_events.sql  0007_accounts.sql  0008_refresh_tokens.sql  0009_devices_account_link.sql  0010_pairings_multi_device.sql  0011_drop_legacy_pairings.sql  0012_account_mac_pairings.sql  0013_rename_account_mac_to_host.sql  0014_rename_role_ios_client_to_mobile_client.sql  0015_social_im.sql
crates/minos-backend/src/: config.rs  error.rs  lib.rs  main.rs
crates/minos-backend/src/auth/: bearer.rs  jwt.rs  mod.rs  passwords.rs  rate_limit.rs
crates/minos-backend/src/envelope/: local_rpc.rs  mod.rs
crates/minos-backend/src/http/: auth.rs  health.rs  mod.rs  ws_devices.rs
crates/minos-backend/src/http/v1/: auth.rs  me.rs  mod.rs  pairing.rs  social.rs  threads.rs
crates/minos-backend/src/ingest/: history.rs  mod.rs  translate.rs
crates/minos-backend/src/pairing/: mod.rs  secret.rs
crates/minos-backend/src/session/: registry.rs
crates/minos-backend/src/store/: account_host_pairings.rs  account_mac_pairings.rs  accounts.rs  devices.rs  mod.rs  pairings.rs  raw_events.rs  refresh_tokens.rs  social.rs  threads.rs  tokens.rs
crates/minos-backend/tests/: auth_endpoints.rs  auth_helper.rs  common.rs  e2e.rs  http_handshake.rs  ingest_roundtrip.rs  list_threads.rs  store_smoke.rs  v1_me.rs  v1_pairing.rs  v1_routing.rs  v1_social.rs  v1_threads.rs  ws_devices.rs
crates/minos-cli-detect/: Cargo.toml
crates/minos-cli-detect/src/: detect.rs  env.rs  lib.rs  runner.rs
crates/minos-cli-detect/tests/: runner_with_env.rs
crates/minos-daemon/: Cargo.toml  build.rs
crates/minos-daemon/migrations/: 0001_initial.sql
crates/minos-daemon/src/: agent.rs  agent_ingest.rs  config.rs  device_secret_store.rs  file_store.rs  handle.rs  jsonl_recover.rs  keychain_store.rs  lib.rs  local_state.rs  logging.rs  main.rs  openwire_trace.rs  paths.rs  reconciliator.rs  relay_client.rs  relay_http.rs  relay_pairing.rs  rpc_server.rs  subscription.rs  tailscale.rs
crates/minos-daemon/src/store/: event_writer.rs  migrations_loader.rs  mod.rs
crates/minos-daemon/tests/: agent_e2e.rs  agent_glue_persists_thread.rs  autobind.rs  e2e.rs  jsonl_recover_test.rs  reconciliation_integration.rs  relay_client_smoke.rs  subscribe_no_runtime.rs
crates/minos-domain/: Cargo.toml
crates/minos-domain/src/: agent.rs  connection.rs  defaults.rs  error.rs  events.rs  ids.rs  lib.rs  pairing_state.rs  relay_state.rs  role.rs
crates/minos-domain/tests/: golden.rs  relay_state_golden.rs
crates/minos-domain/tests/golden/: agent_descriptor.json  agent_event_raw.json  connection_state.json
crates/minos-ffi-frb/: Cargo.toml
crates/minos-ffi-frb/src/: frb_generated.rs  lib.rs
crates/minos-ffi-frb/src/api/: minos.rs  mod.rs
crates/minos-ffi-uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/minos-ffi-uniffi/src/: lib.rs
crates/minos-mobile/: Cargo.toml  build.rs
crates/minos-mobile/src/: auth.rs  build_config.rs  client.rs  http.rs  lib.rs  log_capture.rs  logging.rs  openwire_trace.rs  reconnect.rs  request_trace.rs  rpc.rs  store.rs
crates/minos-mobile/tests/: e2e.rs  e2e_register_login_dispatch_start_agent.rs  envelope_client.rs  http_smoke.rs  pair_with_json.rs
crates/minos-pairing/: Cargo.toml
crates/minos-pairing/src/: lib.rs  state_machine.rs  store.rs  token.rs
crates/minos-pairing/tests/: state_machine_table.rs
crates/minos-protocol/: Cargo.toml
crates/minos-protocol/src/: auth.rs  envelope.rs  events.rs  lib.rs  messages.rs  rpc.rs
crates/minos-protocol/tests/: envelope_golden.rs
crates/minos-protocol/tests/golden/envelope/: event_ingest_checkpoint.json  event_paired.json  event_peer_offline.json  event_peer_online.json  event_server_shutdown.json  event_ui_event_message.json  event_unpaired.json  forward.json  forwarded.json  ingest.json  local_rpc_pair.json  local_rpc_ping.json  local_rpc_response_err.json  local_rpc_response_ok.json
crates/minos-relay/: Cargo.toml
crates/minos-relay/migrations/: 0002_pairings.sql  0003_pairing_tokens.sql
crates/minos-relay/src/: config.rs  error.rs  lib.rs  main.rs
crates/minos-relay/src/envelope/: local_rpc.rs  mod.rs
crates/minos-relay/src/http/: health.rs  mod.rs  ws_devices.rs
crates/minos-relay/src/pairing/: mod.rs  secret.rs
crates/minos-relay/src/session/: mod.rs  registry.rs
crates/minos-relay/src/store/: devices.rs  mod.rs  pairings.rs  tokens.rs
crates/minos-relay/tests/: e2e.rs  http_handshake.rs  store_smoke.rs
crates/minos-transport/: Cargo.toml
crates/minos-transport/src/: auth.rs  backoff.rs  client.rs  lib.rs  server.rs
crates/minos-ui-protocol/: Cargo.toml
crates/minos-ui-protocol/src/: claude.rs  codex.rs  error.rs  gemini.rs  lib.rs  message.rs
crates/minos-ui-protocol/tests/: golden.rs
crates/minos-ui-protocol/tests/golden/codex/: 01_thread_started.expected.json  01_thread_started.input.json  02_user_message.expected.json  02_user_message.input.json  03_agent_message_delta.expected.json  03_agent_message_delta.input.json  04_reasoning_delta.expected.json  04_reasoning_delta.input.json  05_tool_call_full.expected.json  05_tool_call_full.input.json  06_tool_call_error.expected.json  06_tool_call_error.input.json  07_unknown_method.input.json  (+12 more)
xtask/: Cargo.toml
xtask/src/: gen_codex.rs  lint_naming.rs  main.rs
(+252 files in other folders)
