[workspace]
resolver = "2"
members = [
  "crates/minos-domain",
  "crates/minos-protocol",
  "crates/minos-pairing",
  "crates/minos-cli-detect",
  "crates/minos-transport",
  "crates/minos-daemon",
  "crates/minos-mobile",
  "crates/minos-ffi-uniffi",
  "crates/minos-ffi-frb",
  "xtask",
]
default-members = [
  "crates/minos-domain",
  "crates/minos-protocol",
  "crates/minos-pairing",
  "crates/minos-cli-detect",
  "crates/minos-transport",
  "crates/minos-daemon",
  "crates/minos-mobile",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Peterich <wangqingyn2@gmail.com>"]
homepage = "https://github.com/peterich-rs/minos"
repository = "https://github.com/peterich-rs/minos"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"

# ids / random
uuid = { version = "1", features = ["v4", "serde"] }
getrandom = "0.3"
base64 = "0.22"

# url / time
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# rpc
jsonrpsee = { version = "0.24", features = ["server", "client", "ws-client", "macros"] }
tokio-tungstenite = "0.29"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
mars-xlog = { version = "0.1.0-preview.2", features = ["tracing"] }

# ffi (consumed only by shim crates)
uniffi = { version = "0.31", features = ["build"] }

# test deps (declared here so all crates use the same versions)
rstest = "0.23"
proptest = "1"
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"

[profile.release]
lto = true
strip = true

[profile.dev]
debug = true
