[workspace]
resolver = "2"
# Glob members so cargo resolves the workspace incrementally as crates land
# across plan 01 tasks. `xtask` is enumerated explicitly because it lives at the
# root, not under `crates/`. The FFI shim crates (`minos-ffi-*`) are matched by
# the glob; their build-smoke tests run with `cargo test --workspace`.
members = ["crates/*", "xtask"]
# default-members empty → `cargo test` (no flags) tests every glob match.
default-members = []

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Peterich <wangqingyn2@gmail.com>"]
homepage = "https://github.com/peterich-rs/minos"
repository = "https://github.com/peterich-rs/minos"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"

# ids / random
uuid = { version = "1", features = ["v4", "serde"] }
getrandom = "0.3"
base64 = "0.22"

# url / time
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# rpc
jsonrpsee = { version = "0.24", features = ["server", "client", "ws-client", "macros"] }
tokio-tungstenite = "0.29"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
mars-xlog = { version = "0.1.0-preview.2", features = ["tracing"] }

# ffi (consumed only by shim crates)
uniffi = { version = "0.31", features = ["build"] }

# test deps (declared here so all crates use the same versions)
rstest = "0.23"
proptest = "1"
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"

[profile.release]
lto = true
strip = true

[profile.dev]
debug = true
