[workspace]
resolver = "2"
# Glob members so cargo resolves the workspace incrementally as crates land
# across plan 01 tasks. `xtask` is enumerated explicitly because it lives at the
# root, not under `crates/`. The FFI shim crates (`minos-ffi-*`) are matched by
# the glob; their build-smoke tests run with `cargo test --workspace`.
members = ["crates/*", "xtask"]
# default-members empty → `cargo test` (no flags) tests every glob match.
default-members = []

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Peterich <wangqingyn2@gmail.com>"]
homepage = "https://github.com/peterich-rs/minos"
repository = "https://github.com/peterich-rs/minos"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"
anyhow = "1"

# ids / random
uuid = { version = "1", features = ["v4", "serde"] }
getrandom = "0.3"
base64 = "0.22"

# url / time
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# http / rpc
axum = { version = "0.7", features = ["ws", "macros"] }
jsonrpsee = { version = "0.24", features = ["server", "client", "ws-client", "macros"] }
jsonwebtoken = "9"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures-util = "0.3"
async-trait = "0.1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
mars-xlog = { version = "0.1.0-preview.2", features = ["tracing"] }

# relay backend
argon2 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
subtle = "2"
which = "6"

# ffi (consumed only by shim crates)
uniffi = { version = "0.31", features = ["build"] }

# macOS Keychain (consumed by minos-daemon under cfg(target_os = "macos"))
security-framework = { version = "3", default-features = false }

# test deps (declared here so all crates use the same versions)
rstest = "0.23"
proptest = "1"
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"

[workspace.lints.clippy]
# Enable the broad "all" + "pedantic" groups workspace-wide so individual
# crates don't need `#![warn(clippy::pedantic)]`. `priority = -1` makes
# these group flags apply BEFORE the per-lint allows below, so the allows
# (priority 0) take precedence. (cargo sorts low → high before passing to
# clippy; clippy uses last-flag-wins for level resolution.)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow doc-completeness lints — they create high noise on plumbing fns
# without commensurate value. Public API documentation lives in the spec
# (docs/superpowers/specs/) and ADRs (docs/adr/).
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
doc_markdown = "allow"
# Common Rust idioms that pedantic flags but are stylistically fine here.
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
# Test/integration-test idioms.
cloned_ref_to_slice_refs = "allow"
match_wildcard_for_single_variants = "allow"

[profile.release]
lto = true
strip = true

[profile.dev]
debug = true
