[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
minos-agent-runtime = { path = "../crates/minos-agent-runtime", version = "0.1.0" }
minos-domain = { path = "../crates/minos-domain", version = "0.1.0" }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
typify = "0.4"
prettyplease = "0.2"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
schemars = "0.8"

[lints]
workspace = true
