[package]
name = "minos-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minos backend server: WebSocket hub, auth, and REST management API."

[dependencies]
# async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# http / websocket
axum = { workspace = true }
tokio-tungstenite = { workspace = true }

# database
sqlx = { workspace = true }

# auth
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

# concurrent state
dashmap = { workspace = true }

# cli / config
clap = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }

# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# ids / random / time
uuid = { workspace = true }
getrandom = { workspace = true }
chrono = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }

# workspace crates
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }
minos-ui-protocol = { path = "../minos-ui-protocol", version = "0.1.0" }

[dev-dependencies]
# Self-reference enables the `test-support` feature for this crate's own
# integration tests under `tests/` so they can reach the `pub mod
# test_support` factories. Cargo allows a crate to appear in its own
# `[dev-dependencies]` exactly so features can be toggled for tests.
minos-backend = { path = ".", version = "0.1.0", features = ["test-support"] }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tokio-tungstenite = { workspace = true }
# HTTP integration-test helpers: simple GET helper for /health builds a
# raw TCP request; `url` parses the ws:// / http:// endpoints handed
# back from `TcpListener::bind("127.0.0.1:0")`.
url = { workspace = true }
# `tower::ServiceExt::oneshot` drives the axum `Router` directly in
# `tests/v1_*.rs` without binding a TCP listener, and `http-body-util`
# collects the response body into bytes for JSON assertions.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
# Re-exports `test_support::*` modules (`store::test_support`,
# `http::test_support`) as `pub` so integration tests in sibling crates
# (notably `minos-mobile`'s dev-deps in Phase B) can build a backend
# state with an in-memory pool. No production code path enables it; the
# feature is purely a visibility toggle.
test-support = []

[lints]
workspace = true
