[package]
name = "minos-cli-detect"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local CLI agent detection (which + --version)."

[dependencies]
minos-domain = { path = "../minos-domain" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
