[package]
name = "minos-cli-detect"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local CLI agent detection (which + --version)."

[dependencies]
minos-domain = { path = "../minos-domain", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }

[[bin]]
name = "minos-detect"
path = "src/bin/minos-detect.rs"

[lints]
workspace = true
