[package]
name = "minos-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Mac-side composition root: WS server + file store + RPC handlers + CLI detect."

[features]
test-support = ["minos-agent-runtime/test-support"]
uniffi = [
	"dep:uniffi",
	"minos-domain/uniffi",
	"minos-pairing/uniffi",
]

[dependencies]
minos-agent-runtime = { path = "../minos-agent-runtime", version = "0.1.0" }
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }
minos-pairing = { path = "../minos-pairing", version = "0.1.0" }
minos-cli-detect = { path = "../minos-cli-detect", version = "0.1.0" }
minos-transport = { path = "../minos-transport", version = "0.1.0" }
tokio = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
uniffi = { workspace = true, optional = true, features = ["tokio"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
minos-agent-runtime = { path = "../minos-agent-runtime", version = "0.1.0", features = ["test-support"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
