[package]
name = "minos-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Mac-side composition root: WS server + file store + RPC handlers + CLI detect."

[features]
test-support = ["minos-agent-runtime/test-support"]
uniffi = [
	"dep:uniffi",
	"minos-agent-runtime/uniffi",
	"minos-domain/uniffi",
	"minos-protocol/uniffi",
	"minos-pairing/uniffi",
]

[dependencies]
minos-agent-runtime = { path = "../minos-agent-runtime", version = "0.1.0" }
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }
minos-pairing = { path = "../minos-pairing", version = "0.1.0" }
minos-cli-detect = { path = "../minos-cli-detect", version = "0.1.0" }
minos-transport = { path = "../minos-transport", version = "0.1.0" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
uniffi = { workspace = true, optional = true, features = ["tokio"] }
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true, features = ["OSX_10_15"] }

[dev-dependencies]
minos-agent-runtime = { path = "../minos-agent-runtime", version = "0.1.0", features = ["test-support"] }
# Backend is pulled into dev-deps only so the relay_client_smoke integration
# test can spin up an in-process broker without leaking a production
# dependency cycle (daemon is the backend's client, not vice versa).
minos-backend = { path = "../minos-backend", version = "0.1.0" }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
