[package]
name = "minos-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minos pure-value domain types: ids, agents, errors, connection state."

[features]
uniffi = ["dep:uniffi"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
uniffi = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
# Round-trip goldens for protocol types live alongside domain goldens; dev-dep
# cycle is safe because cargo only materialises dev-deps when compiling tests.
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }

[lints]
workspace = true
