[package]
name = "minos-ffi-frb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "flutter_rust_bridge bindings shim over minos-mobile::MobileClient (Dart consumer)."

[lib]
# staticlib → iOS App Store policy; cdylib → Android; rlib → in-workspace
# cargo tests/doctests.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
minos-mobile = { path = "../minos-mobile", version = "0.1.0" }
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }

# Pinned to =2.11.1 to keep the runtime lockstep with the
# `flutter_rust_bridge_codegen 2.11.1` tool installed for this workspace; the
# generated `frb_generated.rs` embeds a codegen-version constant that must
# match the runtime exactly, else the generated boilerplate fails to compile.
flutter_rust_bridge = "=2.11.1"

# `subscribe_state` spawns a tokio task that forwards watch::Receiver updates
# into the frb StreamSink. Full `tokio` (rt + macros) is already a transitive
# dep via `minos-mobile`, so this is pulled primarily to make the dep explicit
# at the adapter boundary.
tokio = { version = "1", features = ["rt"] }

[lints]
workspace = true
