[package]
name = "minos-ffi-frb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "flutter_rust_bridge bindings shim over minos-mobile::MobileClient (Dart consumer)."

[lib]
# staticlib → iOS App Store policy; cdylib → Android; rlib → in-workspace
# cargo tests/doctests.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
minos-mobile = { path = "../minos-mobile", version = "0.1.0" }
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }

# Pinned to =2.11.1 to keep the runtime lockstep with the
# `flutter_rust_bridge_codegen 2.11.1` tool installed for this workspace; the
# generated `frb_generated.rs` embeds a codegen-version constant that must
# match the runtime exactly, else the generated boilerplate fails to compile.
flutter_rust_bridge = "=2.11.1"

# The frb adapter owns a small dedicated Tokio runtime for FFI-triggered
# background work such as forwarding `watch::Receiver` updates into Dart
# streams. Use the workspace-pinned feature set to keep it aligned with the
# rest of the async stack.
tokio = { workspace = true }

[lints]
workspace = true
