[package]
name = "minos-ffi-uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UniFFI bindings shim over minos-daemon::DaemonHandle (Swift consumer)."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
minos-daemon = { path = "../minos-daemon" }
minos-domain = { path = "../minos-domain" }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true }

[lints]
workspace = true
