[package]
name = "minos-ffi-uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UniFFI bindings shim over minos-daemon::DaemonHandle (Swift consumer)."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
minos-daemon = { path = "../minos-daemon", version = "0.1.0", features = ["uniffi"] }
minos-domain = { path = "../minos-domain", version = "0.1.0", features = ["uniffi"] }
minos-pairing = { path = "../minos-pairing", version = "0.1.0", features = ["uniffi"] }
minos-protocol = { path = "../minos-protocol", version = "0.1.0", features = ["uniffi"] }
uniffi = { workspace = true, features = ["tokio"] }

[build-dependencies]
uniffi = { workspace = true, features = ["tokio"] }

[lints]
workspace = true
