[package]
name = "minos-mobile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "iOS-side composition root: WS client + RPC entry surface."

[dependencies]
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }
minos-pairing = { path = "../minos-pairing", version = "0.1.0" }
minos-transport = { path = "../minos-transport", version = "0.1.0" }
tokio = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
# Optional CLI deps for the fake-peer dev binary (gated on the `cli` feature).
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[features]
default = []
# Enables the fake-peer binary. Off by default so iOS shrinks with no
# extra deps; turn on for `cargo run -p minos-mobile --bin fake-peer`.
cli = [
    "anyhow",
    "clap",
    "futures-util",
    "tokio-tungstenite",
    "tokio/macros",
    "tokio/rt-multi-thread",
]

[[bin]]
name = "fake-peer"
path = "src/bin/fake-peer.rs"
required-features = ["cli"]

[dev-dependencies]
tokio-test = { workspace = true }
minos-daemon = { path = "../minos-daemon", version = "0.1.0" }
tempfile = { workspace = true }

[lints]
workspace = true
