[package]
name = "minos-mobile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "iOS-side composition root: envelope WS client + FFI entry surface."

[dependencies]
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }
minos-ui-protocol = { path = "../minos-ui-protocol", version = "0.1.0" }
minos-pairing = { path = "../minos-pairing", version = "0.1.0" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
