[package]
name = "minos-mobile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "iOS-side composition root: envelope WS client + FFI entry surface."

[dependencies]
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }
minos-ui-protocol = { path = "../minos-ui-protocol", version = "0.1.0" }
minos-pairing = { path = "../minos-pairing", version = "0.1.0" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
# Optional CLI deps for the fake-peer dev binary (gated on the `cli` feature).
# tokio-tungstenite and futures-util are always-on (the envelope client
# depends on them) so the cli feature only enables the CLI-specific extras.
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[features]
default = []
# Enables the fake-peer binary. Off by default so iOS shrinks with no
# extra deps; turn on for `cargo run -p minos-mobile --bin fake-peer`.
cli = [
    "anyhow",
    "clap",
    "tokio/macros",
    "tokio/rt-multi-thread",
]

[[bin]]
name = "fake-peer"
path = "src/bin/fake-peer.rs"
required-features = ["cli"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
minos-backend = { path = "../minos-backend", version = "0.1.0", features = ["test-support"] }
axum = { workspace = true }

[lints]
workspace = true
