[package]
name = "minos-pairing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pairing state machine, trusted device records, and the PairingStore port."

[dependencies]
minos-domain = { path = "../minos-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
