[package]
name = "minos-pairing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pairing state machine, trusted device records, and the PairingStore port."

[features]
uniffi = ["dep:uniffi", "minos-domain/uniffi"]

[dependencies]
minos-domain = { path = "../minos-domain", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
uniffi = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
