[package]
name = "minos-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minos JSON-RPC contract: messages, events, and the MinosRpc service trait."

[dependencies]
minos-domain = { path = "../minos-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
