[package]
name = "minos-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minos relay server: WebSocket hub, auth, and REST management API."

[dependencies]
# async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# http / websocket
axum = { workspace = true }
tokio-tungstenite = { workspace = true }

# database
sqlx = { workspace = true }

# auth
argon2 = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

# concurrent state
dashmap = { workspace = true }

# cli / config
clap = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }

# error handling
thiserror = { workspace = true }

# ids / random / time
uuid = { workspace = true }
getrandom = { workspace = true }
chrono = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mars-xlog = { workspace = true }

# workspace crates
minos-domain = { path = "../minos-domain", version = "0.1.0" }
minos-protocol = { path = "../minos-protocol", version = "0.1.0" }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tokio-tungstenite = { workspace = true }
# HTTP integration-test helpers: simple GET helper for /health builds a
# raw TCP request; `url` parses the ws:// / http:// endpoints handed
# back from `TcpListener::bind("127.0.0.1:0")`.
url = { workspace = true }

[lints]
workspace = true
