[package]
name = "minos-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WebSocket transport (jsonrpsee server + client) and reconnect logic."

[dependencies]
minos-domain = { path = "../minos-domain" }
minos-protocol = { path = "../minos-protocol" }
tokio = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
